<resources>
    <string name="app_name">Android</string>
    <string name="remove_shortcut">remove_shortcut</string>
    <string name="disable_shortcut">disable_shortcut</string>
    <string name="add_new_website">add_new_website</string>
    <string name="existing_shortcuts">existing_shortcuts</string>
    <string name="enable_shortcut">enable_shortcut</string>
    <string name="meat">meat</string>
    <string name="pirates">pirates</string>
    <string name="cheese">cheese</string>
    <string name="ninjas">ninjas</string>
    <string name="file">文件</string>
    <string name="create_new">创建文件</string>
    <string name="open">打开</string>
    <string name="open_drawlayout">打开drawlayout</string>
    <string name="close_drawlayout">关闭drawlayout</string>
    <string name="preference_file_key">preference_file_key</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="planets_array">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>


</resources>
